--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pfrs-input/pfrs-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pfrs-input/pfrs-input.component.html
@@ -50,7 +50,7 @@
   </mat-form-field>
 
   <div class="container-wide">
-    <div class="soil-table double-table">
+    <div class="soil-table">
       <div></div>
       <div>
         <label for="volume">Soil to be Removed</label>
