--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/roso-input/roso-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/roso-input/roso-input.component.html
@@ -38,77 +38,57 @@
     ></textarea>
   </mat-form-field>
 
-  <div class="container">
-    <div class="soil-table">
-      <div></div>
-      <div>
-        <label for="volume">Soil to be Removed</label>
-      </div>
-      <div class="label">
-        <label for="volumeToRemove">Volume*</label>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="volumeToRemove"
-          />
-          <span matTextSuffix>m<sup>3</sup></span>
-        </mat-form-field>
-      </div>
-      <div class="label">
-        <label for="areaToRemove">Area*</label>
-        <div class="subtext">Note: 0.01 ha is 100m2</div>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="areaToRemove"
-          />
-          <span matTextSuffix>ha</span>
-        </mat-form-field>
-      </div>
-      <div class="label">
-        <label for="maximumDepthToRemove">Maximum Depth*</label>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="maximumDepthToRemove"
-          />
-          <span matTextSuffix>m</span>
-        </mat-form-field>
-      </div>
-      <div class="label">
-        <label for="averageDepthToRemove">Average Depth*</label>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="averageDepthToRemove"
-          />
-          <span matTextSuffix>m</span>
-        </mat-form-field>
-      </div>
-    </div>
+  <div class="grid-2">
+    <mat-form-field appearance="outline">
+      <input
+        matInput
+        min="0.01"
+        mask="separator.2"
+        thousandSeparator=","
+        separatorLimit="9999999999"
+        formControlName="volumeToRemove"
+        placeholder="Volume*"
+      />
+      <span matTextSuffix>m<sup>3</sup></span>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <input
+        matInput
+        min="0.01"
+        mask="separator.2"
+        thousandSeparator=","
+        separatorLimit="9999999999"
+        formControlName="areaToRemove"
+        placeholder="Area*"
+      />
+      <span matTextSuffix>ha</span>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <input
+        matInput
+        min="0.01"
+        mask="separator.2"
+        thousandSeparator=","
+        separatorLimit="9999999999"
+        formControlName="maximumDepthToRemove"
+        placeholder="Maximum Depth*"
+      />
+      <span matTextSuffix>m</span>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <input
+        matInput
+        min="0.01"
+        mask="separator.2"
+        thousandSeparator=","
+        separatorLimit="9999999999"
+        formControlName="averageDepthToRemove"
+        placeholder="Volume*"
+      />
+      <span matTextSuffix>m</span>
+    </mat-form-field>
   </div>
 </form>
