--- a/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-components/decision-component/pfrs-input/pfrs-input.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-components/decision-component/pfrs-input/pfrs-input.component.html
@@ -49,132 +49,130 @@
     ></textarea>
   </mat-form-field>
 
-  <div class="container-wide">
-    <div class="soil-table double-table">
-      <div></div>
-      <div>
-        <label for="volume">Soil to be Removed</label>
-      </div>
-      <div>
-        <label for="volume">Fill to be placed</label>
-      </div>
-      <div class="label">
-        <label for="volumeToRemove">Volume*</label>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="volumeToRemove"
-          />
-          <span matTextSuffix>m<sup>3</sup></span>
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="volumeToPlace"
-          />
-          <span matTextSuffix>m<sup>3</sup></span>
-        </mat-form-field>
-      </div>
-      <div class="label">
-        <label for="areaToRemove">Area*</label>
-        <div class="subtext">Note: 0.01 ha is 100m2</div>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="areaToRemove"
-          />
-          <span matTextSuffix>ha</span>
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="areaToPlace"
-          />
-          <span matTextSuffix>ha</span>
-        </mat-form-field>
-      </div>
-      <div class="label">
-        <label for="maximumDepthToRemove">Maximum Depth*</label>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="maximumDepthToRemove"
-          />
-          <span matTextSuffix>m</span>
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="maximumDepthToPlace"
-          />
-          <span matTextSuffix>m</span>
-        </mat-form-field>
-      </div>
-      <div class="label">
-        <label for="averageDepthToRemove">Average Depth*</label>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="averageDepthToRemove"
-          />
-          <span matTextSuffix>m</span>
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="full-width">
-          <input
-            min="0.01"
-            mask="separator.2"
-            thousandSeparator=","
-            separatorLimit="9999999999"
-            matInput
-            formControlName="averageDepthToPlace"
-          />
-          <span matTextSuffix>m</span>
-        </mat-form-field>
-      </div>
+  <div class="soil-table">
+    <div></div>
+    <div>
+      <label for="volume">Soil to be Removed</label>
+    </div>
+    <div>
+      <label for="volume">Fill to be placed</label>
+    </div>
+    <div class="label">
+      <label for="volumeToRemove">Volume*</label>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="full-width">
+        <input
+          min="0.01"
+          mask="separator.2"
+          thousandSeparator=","
+          separatorLimit="9999999999"
+          matInput
+          formControlName="volumeToRemove"
+        />
+        <span matTextSuffix>m<sup>3</sup></span>
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="full-width">
+        <input
+          min="0.01"
+          mask="separator.2"
+          thousandSeparator=","
+          separatorLimit="9999999999"
+          matInput
+          formControlName="volumeToPlace"
+        />
+        <span matTextSuffix>m<sup>3</sup></span>
+      </mat-form-field>
+    </div>
+    <div class="label">
+      <label for="areaToRemove">Area*</label>
+      <div class="subtext">Note: 0.01 ha is 100m2</div>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="full-width">
+        <input
+          min="0.01"
+          mask="separator.2"
+          thousandSeparator=","
+          separatorLimit="9999999999"
+          matInput
+          formControlName="areaToRemove"
+        />
+        <span matTextSuffix>ha</span>
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="full-width">
+        <input
+          min="0.01"
+          mask="separator.2"
+          thousandSeparator=","
+          separatorLimit="9999999999"
+          matInput
+          formControlName="areaToPlace"
+        />
+        <span matTextSuffix>ha</span>
+      </mat-form-field>
+    </div>
+    <div class="label">
+      <label for="maximumDepthToRemove">Maximum Depth*</label>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="full-width">
+        <input
+          min="0.01"
+          mask="separator.2"
+          thousandSeparator=","
+          separatorLimit="9999999999"
+          matInput
+          formControlName="maximumDepthToRemove"
+        />
+        <span matTextSuffix>m</span>
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="full-width">
+        <input
+          min="0.01"
+          mask="separator.2"
+          thousandSeparator=","
+          separatorLimit="9999999999"
+          matInput
+          formControlName="maximumDepthToPlace"
+        />
+        <span matTextSuffix>m</span>
+      </mat-form-field>
+    </div>
+    <div class="label">
+      <label for="averageDepthToRemove">Average Depth*</label>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="full-width">
+        <input
+          min="0.01"
+          mask="separator.2"
+          thousandSeparator=","
+          separatorLimit="9999999999"
+          matInput
+          formControlName="averageDepthToRemove"
+        />
+        <span matTextSuffix>m</span>
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field appearance="outline" class="full-width">
+        <input
+          min="0.01"
+          mask="separator.2"
+          thousandSeparator=","
+          separatorLimit="9999999999"
+          matInput
+          formControlName="averageDepthToPlace"
+        />
+        <span matTextSuffix>m</span>
+      </mat-form-field>
     </div>
   </div>
 </form>
