NOI Decisions V2 Pt2
* Update UI to match NOI
* Update number generation for decisions to include NOI and Application Decisions
* Rename DecisionDocumentDto -> ApplicationDecisionDocumentDto

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pofo/pofo.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pofo/pofo.component.html
@@ -11,60 +11,23 @@
     *ngIf="component.soilFillTypeToPlace === null || component.soilFillTypeToPlace === undefined"
   ></app-no-data>
 </div>
-<div class="full-width">
-  <table>
-    <thead>
-      <th></th>
-      <th>Fill to be Placed</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="soil-table-label">Volume</td>
-        <td>
-          <span *ngIf="component.soilToPlaceVolume !== null && component.soilToPlaceVolume !== undefined">
-            {{ component.soilToPlaceVolume }} m<sup>3</sup>
-          </span>
-          <app-no-data
-            *ngIf="component.soilToPlaceVolume === null || component.soilToPlaceVolume === undefined"
-          ></app-no-data>
-        </td>
-      </tr>
-      <tr>
-        <td class="soil-table-label">
-          Area
-          <div class="subtext">Note: 0.01 ha is 100m2</div>
-        </td>
-        <td>
-          <span *ngIf="component.soilToPlaceArea !== null && component.soilToPlaceArea !== undefined">
-            {{ component.soilToPlaceArea }} ha
-          </span>
-          <app-no-data
-            *ngIf="component.soilToPlaceArea === null || component.soilToPlaceArea === undefined"
-          ></app-no-data>
-        </td>
-      </tr>
-      <tr>
-        <td class="soil-table-label">Maximum Depth</td>
-        <td>
-          <span *ngIf="component.soilToPlaceMaximumDepth !== null && component.soilToPlaceMaximumDepth !== undefined">
-            {{ component.soilToPlaceMaximumDepth }} m
-          </span>
-          <app-no-data
-            *ngIf="component.soilToPlaceMaximumDepth === null || component.soilToPlaceMaximumDepth === undefined"
-          ></app-no-data>
-        </td>
-      </tr>
-      <tr>
-        <td class="soil-table-label">Average Depth</td>
-        <td>
-          <span *ngIf="component.soilToPlaceAverageDepth !== null && component.soilToPlaceAverageDepth !== undefined"
-            >{{ component.soilToPlaceAverageDepth }} m</span
-          >
-          <app-no-data
-            *ngIf="component.soilToPlaceAverageDepth === null || component.soilToPlaceAverageDepth === undefined"
-          ></app-no-data>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<div>
+  <div class="subheading2">Volume</div>
+  {{ component.soilToPlaceVolume }}<span *ngIf="component.soilToPlaceVolume !== null"> m<sup>3</sup></span>
+  <app-no-data *ngIf="component.soilToPlaceVolume === null"></app-no-data>
+</div>
+<div>
+  <div class="subheading2">Area</div>
+  {{ component.soilToPlaceArea }}<span *ngIf="component.soilToPlaceArea !== null"> m<sup>2</sup></span>
+  <app-no-data *ngIf="component.soilToPlaceArea === null"></app-no-data>
+</div>
+<div>
+  <div class="subheading2">Maximum Depth</div>
+  {{ component.soilToPlaceMaximumDepth }}<span *ngIf="component.soilToPlaceMaximumDepth !== null"> m</span>
+  <app-no-data *ngIf="component.soilToPlaceMaximumDepth === null"></app-no-data>
+</div>
+<div>
+  <div class="subheading2">Average Depth</div>
+  {{ component.soilToPlaceAverageDepth }}<span *ngIf="component.soilToPlaceAverageDepth !== null"> m</span>
+  <app-no-data *ngIf="component.soilToPlaceAverageDepth === null"></app-no-data>
 </div>
