--- a/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v1/decision-v1.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v1/decision-v1.component.html
@@ -48,7 +48,7 @@
       <div class="decision-content">
         <div>
           <div class="subheading2">Decision Date</div>
-          {{ decision.date | momentFormat }}
+          {{ decision.date! | momentFormat }}
         </div>
         <div>
           <div class="subheading2">Decision Outcome</div>
