Pass correct argument to fix error in bottom cancel button

--- a/portal-frontend/src/app/features/notice-of-intents/view-submission/view-notice-of-intent-submission.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/view-submission/view-notice-of-intent-submission.component.html
@@ -67,12 +67,7 @@
         </div>
         <div class="buttons" *ngIf="submission">
           <div>
-            <button
-              *ngIf="submission.canEdit"
-              mat-stroked-button
-              color="warn"
-              (click)="onCancel(submission.fileNumber)"
-            >
+            <button *ngIf="submission.canEdit" mat-stroked-button color="warn" (click)="onCancel(submission.uuid)">
               Cancel NOI
             </button>
           </div>
