--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/additional-information/additional-information.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/additional-information/additional-information.component.html
@@ -14,7 +14,10 @@
   </div>
 
   <ng-container *ngIf="_noiSubmission.soilIsRemovingSoilForNewStructure">
-    <div class="full-width subheading2">The total floor area (m<sup>2</sup>) of the proposed structure(s)</div>
+    <div class="full-width subheading2">
+      The total floor area (m<sup>2</sup>) of the proposed structure(s)
+      <app-updated-banner *ngIf="updatedFields.includes('soilProposedStructures')"></app-updated-banner>
+    </div>
     <div class="full-width soil-table">
       <div class="grid-1 subheading2">#</div>
       <div class="grid-2 subheading2">Type</div>
